fix: header positioning and z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -83,7 +83,7 @@ header {
     top: 0;
     transform: translate(-50%, 0);
     width: clamp(20rem, 100%, 1500px);
-    z-index: -1;
+    z-index: 0;
     transition: width 1.5s ease-in-out;
     border-image: radial-gradient(
         50% 50% at 50% 125%,
